--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.11"
+    "@astrojs/tailwind": "^5.1.1",
+    "astro": "^4.15.11",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
     "typescript": "^5.6.2"
