--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "amqplib": "^0.10.4",
     "astro": "^4.15.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
